test/aliased-port.integ.snapshot/aws-ecs-integ.template.json
{
 "Resources": {
  "productionenvironmentvpcAEB47DF7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1Subnet8D92C089": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1RouteTableAssociationA8117374": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
    }
   }
  },
  "productionenvironmentvpcPublicSubnet1DefaultRoute524C894D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   },
   "DependsOn": [
    "productionenvironmentvpcVPCGW1B428D07"
   ]
  },
  "productionenvironmentvpcPublicSubnet1EIP54BA88DB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "productionenvironmentvpcPublicSubnet1EIP54BA88DB",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "productionenvironmentvpcPublicSubnet1DefaultRoute524C894D",
    "productionenvironmentvpcPublicSubnet1RouteTableAssociationA8117374"
   ]
  },
  "productionenvironmentvpcPublicSubnet2Subnet298E6C31": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2RouteTable842A68D7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2RouteTableAssociation0A7549F3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
    }
   }
  },
  "productionenvironmentvpcPublicSubnet2DefaultRoute92CD697D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   },
   "DependsOn": [
    "productionenvironmentvpcVPCGW1B428D07"
   ]
  },
  "productionenvironmentvpcPublicSubnet2EIP14CA46AA": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "productionenvironmentvpcPublicSubnet2EIP14CA46AA",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "productionenvironmentvpcPublicSubnet2DefaultRoute92CD697D",
    "productionenvironmentvpcPublicSubnet2RouteTableAssociation0A7549F3"
   ]
  },
  "productionenvironmentvpcPrivateSubnet1Subnet53F632E6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet1RouteTableAssociation8BA32463": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet1DefaultRouteFBB3DE6C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet2Subnet756FB93C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "productionenvironmentvpcPrivateSubnet2RouteTableAssociation09188261": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
    },
    "SubnetId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
    }
   }
  },
  "productionenvironmentvpcPrivateSubnet2DefaultRoute5F9AB6C1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC"
    }
   }
  },
  "productionenvironmentvpcIGWE7C39890": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-integ/production-environment-vpc"
     }
    ]
   }
  },
  "productionenvironmentvpcVPCGW1B428D07": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    },
    "InternetGatewayId": {
     "Ref": "productionenvironmentvpcIGWE7C39890"
    }
   }
  },
  "productionenvironmentclusterC6599D2D": {
   "Type": "AWS::ECS::Cluster"
  },
  "productionenvironmentclusterDefaultServiceDiscoveryNamespaceBE74D64D": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "production",
    "Vpc": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    }
   }
  },
  "ServiceConnecttaskdefinitionTaskRole9F4C55FD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ServiceConnecttaskdefinitionB19E0536": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 256,
      "Environment": [
       {
        "Name": "PORT",
        "Value": "80"
       }
      ],
      "Essential": true,
      "Image": "nathanpeck/name",
      "Memory": 512,
      "Name": "app",
      "PortMappings": [
       {
        "AppProtocol": "grpc",
        "ContainerPort": 80,
        "Name": "name",
        "Protocol": "tcp"
       }
      ],
      "Ulimits": [
       {
        "HardLimit": 1024000,
        "Name": "nofile",
        "SoftLimit": 1024000
       }
      ]
     }
    ],
    "Cpu": "256",
    "Family": "awsecsintegServiceConnecttaskdefinitionCE44FAD5",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ServiceConnecttaskdefinitionTaskRole9F4C55FD",
      "Arn"
     ]
    }
   }
  },
  "ServiceConnectserviceService9DF17EC6": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "productionenvironmentclusterC6599D2D"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ServiceConnectserviceSecurityGroup0D1FCAE3",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
       },
       {
        "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
       }
      ]
     }
    },
    "ServiceConnectConfiguration": {
     "Enabled": true,
     "Namespace": "production",
     "Services": [
      {
       "ClientAliases": [
        {
         "DnsName": "name",
         "Port": 1000
        }
       ],
       "PortName": "name"
      }
     ]
    },
    "TaskDefinition": {
     "Ref": "ServiceConnecttaskdefinitionB19E0536"
    }
   },
   "DependsOn": [
    "productionenvironmentclusterDefaultServiceDiscoveryNamespaceBE74D64D"
   ]
  },
  "ServiceConnectserviceSecurityGroup0D1FCAE3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-integ/ServiceConnect-service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    }
   },
   "DependsOn": [
    "productionenvironmentclusterDefaultServiceDiscoveryNamespaceBE74D64D"
   ]
  },
  "ClientServicetaskdefinitionTaskRoleACC19FE3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClientServicetaskdefinition89718CF4": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 256,
      "Environment": [
       {
        "Name": "PORT",
        "Value": "80"
       },
       {
        "Name": "URL",
        "Value": "http://name"
       }
      ],
      "Essential": true,
      "Image": "nathanpeck/greeter",
      "Memory": 512,
      "Name": "app",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ],
      "Ulimits": [
       {
        "HardLimit": 1024000,
        "Name": "nofile",
        "SoftLimit": 1024000
       }
      ]
     }
    ],
    "Cpu": "256",
    "Family": "awsecsintegClientServicetaskdefinition11AA48A8",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClientServicetaskdefinitionTaskRoleACC19FE3",
      "Arn"
     ]
    }
   }
  },
  "ClientServiceserviceService8F3E675C": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "productionenvironmentclusterC6599D2D"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClientServiceserviceSecurityGroupFBB92787",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
       },
       {
        "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
       }
      ]
     }
    },
    "ServiceConnectConfiguration": {
     "Enabled": true,
     "Namespace": "production"
    },
    "TaskDefinition": {
     "Ref": "ClientServicetaskdefinition89718CF4"
    }
   },
   "DependsOn": [
    "productionenvironmentclusterDefaultServiceDiscoveryNamespaceBE74D64D"
   ]
  },
  "ClientServiceserviceSecurityGroupFBB92787": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-integ/ClientService-service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "productionenvironmentvpcAEB47DF7"
    }
   },
   "DependsOn": [
    "productionenvironmentclusterDefaultServiceDiscoveryNamespaceBE74D64D"
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
